--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "beatsaber_overlay",
-    "version": "2.0.3a",
+    "version": "2.1.0",
     "description": "Beat Saber Overlay for BSPlus, HTTPStatus and DataPuller",
     "main": "init.js",
     "scripts": {
