Modification of Dietah skin
- Some tweak

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "BeatSaber-Overlay",
-    "version": "2.2.0",
+    "version": "2.2.0a",
     "description": "Beat Saber Overlay for BSPlus, HTTPStatus, HTTPSiraStatus and DataPuller",
     "main": "init.js",
     "scripts": {
