--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
-    "name": "BeatSaber-Overlay",
-    "version": "2.2.0a",
-    "description": "Beat Saber Overlay for BSPlus, HTTPStatus, HTTPSiraStatus and DataPuller",
+    "name": "MultiGames-Overlay",
+    "version": "3.0.0",
+    "description": "Overlay multi games - Beat Saber, SynthRiders, AudioTrip and Audica",
     "main": "init.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "tsc --build"
+        "build:dev": "tsc -w",
+        "build:prod": "tsc --build && webpack"
     },
     "author": "Hyldra Zolxy",
     "license": "ISC",
-    "type": "module",
     "devDependencies": {
-        "@types/jquery": "^3.5.14"
+        "@types/jquery": "^3.5.14",
+        "typescript": "^4.9.4",
+        "webpack-cli": "^5.0.1"
+    },
+    "dependencies": {
+        "terser-webpack-plugin": "^5.3.6"
     }
 }
