Project Organisation and Leaderboard Fix
* General
- Architecture of the project
- Clean the project files
- No more forEach()
- Move the interface when it's not use in global

* Leaderboard
- Fix position of the local player
- Fix username color of the local player

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,14 @@
 /.idea/
 /node_modules/
-/js/*.js
-tsconfig.json
 /php/Cache/
 /dist/
+tsconfig.json
 package-lock.json
-Idea
+
+/js/*.js
+/js/games/audica/*.js
+/js/games/audioTrip/*.js
+/js/games/beatSaber/*.js
+/js/games/synthRiders/*.js
+/js/modules/*.js
+/js/system/*.js
