Add support of Adofai game
- Support of Adofai game
- Fix round of percentage in song
- Fix song card display on SynthRiders
- Add IP params in SynthRiders websocket (Yeah, you can reach the websocket with a tweak into your game folder ...)
- Fix color on the miss / fc on Dietah skin
- Fix for cover (Cover mode instead of Contain)

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ tsconfig.json
 package-lock.json
 
 /js/*.js
+/js/games/adofai/*.js
 /js/games/audica/*.js
 /js/games/audioTrip/*.js
 /js/games/beatSaber/*.js
