--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
     "name": "multigames-overlay",
-    "version": "3.0.0",
-    "description": "Overlay multi games - Beat Saber, SynthRiders, AudioTrip and Audica",
+    "version": "3.0.1",
+    "description": "Overlay multigames - Beat Saber, SynthRiders, AudioTrip and Audica",
     "main": "init.js",
     "scripts": {
         "build:dev": "tsc -w",
-        "build:prod": "tsc --build && webpack"
+        "build:prod": "tsc --build && webpack",
+        "tailwind": "npx tailwindcss -i ./style.global.css -o ./style.output.css --watch"
     },
     "author": "Hyldra Zolxy",
     "license": "ISC",
     "devDependencies": {
-        "@types/jquery": "^3.5.14",
-        "typescript": "^4.9.4",
-        "webpack-cli": "^5.0.1"
+        "@types/jquery": "^3.5.31",
+        "tailwindcss": "^3.4.13",
+        "typescript": "^5.6.2",
+        "webpack-cli": "^5.1.4"
     },
     "dependencies": {
-        "terser-webpack-plugin": "^5.3.6"
+        "terser-webpack-plugin": "^5.3.10"
     }
 }
