--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "multigames-overlay",
-    "version": "3.0.1",
+    "version": "3.0.1b",
     "description": "Overlay multigames - Beat Saber, SynthRiders, AudioTrip and Audica",
     "main": "init.js",
     "scripts": {
