--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "multigames-overlay",
-    "version": "3.0.1b",
+    "version": "3.0.2",
     "description": "Overlay multigames - Beat Saber, SynthRiders, AudioTrip and Audica",
     "main": "init.js",
     "scripts": {
@@ -12,8 +12,8 @@
     "license": "ISC",
     "devDependencies": {
         "@types/jquery": "^3.5.31",
-        "tailwindcss": "^3.4.13",
-        "typescript": "^5.6.2",
+        "tailwindcss": "^3.4.14",
+        "typescript": "^5.6.3",
         "webpack-cli": "^5.1.4"
     },
     "dependencies": {
