--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "multigames-overlay",
-    "version": "3.0.2a",
+    "version": "3.0.3",
     "description": "Overlay multigames - Beat Saber, SynthRiders, AudioTrip and Audica",
     "main": "init.js",
     "scripts": {
@@ -11,7 +11,7 @@
     "author": "Hyldra Zolxy",
     "license": "ISC",
     "devDependencies": {
-        "@types/jquery": "^3.5.31",
+        "@types/jquery": "^3.5.32",
         "tailwindcss": "^3.4.14",
         "typescript": "^5.6.3",
         "webpack-cli": "^5.1.4"
